--- a/.docker/php-debug/nginx-debug.conf
+++ b/.docker/php-debug/nginx-debug.conf
@@ -96,6 +96,10 @@ server {
         rewrite .* /index.php$is_args$args last;
     }
 
+    location /hub {
+        proxy_pass http://mercure/.well-known/mercure;
+    }
+
     # Thumbnails
     location ~* .*/(image|video)-thumb__\d+__.* {
         try_files /var/tmp/thumbnails$uri /index.php;
