--- a/composer.json
+++ b/composer.json
@@ -21,27 +21,34 @@
   ],
   "require": {
     "php": "~8.3.0 || ~8.4.0",
-    "pimcore/pimcore": "*",
-    "pimcore/platform-version": "2025.4",
+    "basilicom/pimcore-path-formatter-bundle": "^3.0",
+    "coreshop/messenger-bundle": "^5.0",
+    "mcsupply/ecommerce-bundle": "*",
+    "phpdocumentor/reflection-docblock": "^5.6",
     "pimcore/admin-ui-classic-bundle": "*",
-    "pimcore/quill-bundle": "*",
-    "pimcore/perspective-editor": "*",
     "pimcore/data-hub": "*",
     "pimcore/data-importer": "*",
-    "symfony/dotenv": "^6.4.12 || ^7.2",
-    "symfony/runtime": "^6.4.12 || ^7.3",
+    "pimcore/generic-data-index-bundle": "^2.4",
+    "pimcore/opensearch-client": "^2.1",
+    "pimcore/perspective-editor": "*",
+    "pimcore/pimcore": "*",
+    "pimcore/platform-version": "2025.4",
+    "pimcore/quill-bundle": "*",
+    "pimcore/studio-backend-bundle": "^0.10.21",
+    "pimcore/studio-ui-bundle": "dev-2312-user-management-document-types-dropdown-is-empty",
     "symfony/amqp-messenger": "^6.2 || ^7.2",
+    "symfony/dotenv": "^6.4.12 || ^7.2",
+    "symfony/property-info": "^7.4",
+    "symfony/runtime": "^6.4.12 || ^7.3",
     "torqit/pimcore-folder-creator-bundle": ">=4.0.1 <5.0",
-    "torqit/pimcore-role-creator-bundle": "^5.0",
-    "coreshop/messenger-bundle": "^5.0",
     "torqit/pimcore-object-layout-grid-bundle": ">=2.0.1 <3.0",
-    "basilicom/pimcore-path-formatter-bundle": "^3.0",
-    "mcsupply/ecommerce-bundle": "*"
+    "torqit/pimcore-role-creator-bundle": "^5.0"
   },
   "require-dev": {
     "codeception/codeception": "^5.0.3",
     "codeception/module-symfony": "^3.1.0",
-    "phpstan/phpstan-symfony": "^2.0.8"
+    "phpstan/phpstan-symfony": "^2.0.8",
+    "symfony/ux-toolkit": "^2.32"
   },
   "suggest": {
     "pimcore/data-hub": "Universal data interface for GraphQL, CSV and other formats"
