Feature/add studio (#12)
* Add Studio support

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -70,7 +70,12 @@ services:
     App\EventListener\:
         resource: '../src/EventListener'
 
-    App\LinkGenerator\ProductLinkGenerator:
+    App\LinkGenerator\:
+        resource: '../src/LinkGenerator'
+        public: true
+
+    App\PreviewGenerator\:
+        resource: '../src/PreviewGenerator'
         public: true
 
     App\ExpressionLanguage\BasicExpressionProvider:
