--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,7 @@
     "symfony/dotenv": "^6.4.12 || ^7.2",
     "symfony/property-info": "^7.4",
     "symfony/runtime": "^6.4.12 || ^7.3",
-    "symfonycasts/tailwind-bundle": "*",
+    "symfonycasts/tailwind-bundle": "^0.12.0",
     "torqit/pimcore-folder-creator-bundle": ">=4.0.1 <5.0",
     "torqit/pimcore-object-layout-grid-bundle": ">=2.0.1 <3.0",
     "torqit/pimcore-role-creator-bundle": "^5.0"
