--- a/config/config.yaml
+++ b/config/config.yaml
@@ -49,6 +49,23 @@ ux_map:
     google_maps:
         default_map_id: '%env(GOOGLE_MAPS_MAP_ID)'
 
+mercure:
+    hubs:
+        default:
+            # Internal (PHP/Messenger worker talks to the container directly)
+            url: 'http://mercure/.well-known/mercure'
+
+            # External — use a relative (same-origin) path so you don't have to hard-code a host
+            public_url: '/hub/.well-known/mercure'
+
+            jwt:
+                secret: '%env(MERCURE_JWT)%'
+                publish: ['*']
+
+turbo:
+    broadcast:
+        enabled: true
+
      # config_location:
      #    image_thumbnails:
      #        write_target:
