--- a/.env
+++ b/.env
@@ -54,3 +54,4 @@ REDIS_DB=12
 REDIS_SESSION_DB=14
 DEFAULT_DOMAIN_NAME=http://localhost/
 UX_MAP_DSN=google://%env(resolve:GOOGLE_MAPS_API_KEY)%@default
+MESSENGER_TRANSPORT_DSN=redis://redis:6379/messages
