--- a/.docker/php-debug/nginx-debug.conf
+++ b/.docker/php-debug/nginx-debug.conf
@@ -96,8 +96,9 @@ server {
         rewrite .* /index.php$is_args$args last;
     }
 
-    location /hub/ {
-        proxy_pass         http://mercure/;
+    location /hub {
+        rewrite ^/hub(.*)$ $1 break;
+        proxy_pass         http://mercure;
         proxy_http_version 1.1;
         proxy_buffering    off;
         proxy_cache        off;
@@ -107,6 +108,7 @@ server {
         proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header   X-Forwarded-Proto $scheme;
         proxy_set_header   Authorization $http_authorization;
+        proxy_set_header   X-Forwarded-Host $host;
         proxy_connect_timeout 30s;
         proxy_send_timeout    60s;
         proxy_read_timeout    3600s;
