--- a/.docker/supervisord/supervisord.conf
+++ b/.docker/supervisord/supervisord.conf
@@ -82,3 +82,14 @@ process_name=%(program_name)s_%(process_num)02d
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 redirect_stderr=true
+
+[program:messenger_async]
+command=/usr/local/bin/php /var/www/html/bin/console messenger:consume async --time-limit=3600 --memory-limit=128M -vv
+user=www-data
+numprocs=1
+startsecs=0
+autostart=true
+autorestart=true
+process_name=%(program_name)s_%(process_num)02d
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
