--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -39,6 +39,7 @@ services:
                 - pimcore-product-key
                 - pimcore-instance-identifier
                 - pimcore-encryption-secret
+                - mercure-jwt
         depends_on:
             db:
                 condition: service_healthy
@@ -49,6 +50,7 @@ services:
             - pimcore-product-key
             - pimcore-instance-identifier
             - pimcore-encryption-secret
+            - mercure-jwt
         volumes:
             - .:/var/www/html
             - ./.docker/init/init.sh:/init.sh
@@ -173,12 +175,16 @@ services:
 
     opensearch:
         image: opensearchproject/opensearch:2
+        entrypoint: ["/usr/local/bin/opensearch-entrypoint-wrapper.sh"]
+        volumes:
+            - ./.docker/opensearch/opensearch-entrypoint-wrapper.sh:/usr/local/bin/opensearch-entrypoint-wrapper.sh:ro
         environment:
             - discovery.type=single-node
             - plugins.security.disabled=true
             - action.auto_create_index=false
             - OPENSEARCH_JAVA_OPTS=-Xms512m -Xmx512m
-            - OPENSEARCH_INITIAL_ADMIN_PASSWORD=${OPENSEARCH_INITIAL_ADMIN_PASSWORD}
+        secrets:
+            - opensearch-initial-admin-password
         ports:
             - "9200:9200"
 
@@ -216,3 +222,5 @@ secrets:
       file: ./.secrets/pimcore-encryption-secret
     mercure-jwt:
         file: ./.secrets/mercure-jwt
+    opensearch-initial-admin-password:
+        file: ./.secrets/opensearch-initial-admin-password
