--- a/.docker/php-debug/nginx-debug.conf
+++ b/.docker/php-debug/nginx-debug.conf
@@ -97,7 +97,21 @@ server {
     }
 
     location /hub {
-        proxy_pass http://mercure/.well-known/mercure;
+        rewrite ^/hub(.*)$ $1 break;
+        proxy_pass         http://mercure;
+        proxy_http_version 1.1;
+        proxy_buffering    off;
+        proxy_cache        off;
+        chunked_transfer_encoding off;
+        proxy_set_header   Host $host;
+        proxy_set_header   X-Real-IP $remote_addr;
+        proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header   X-Forwarded-Proto $scheme;
+        proxy_set_header   Authorization $http_authorization;
+        proxy_set_header   X-Forwarded-Host $host;
+        proxy_connect_timeout 30s;
+        proxy_send_timeout    60s;
+        proxy_read_timeout    3600s;
     }
 
     # Thumbnails
